--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
       <div class="row">
         <div class="col col-lg-12 col-sm-12">
           <h1>BobCat Bulletin</h1>
-          <p>Filter Announcements.</p>
+          <p>Filter [announce]ments</p>
           
         </div>
       </div>
