Added varsity and lecture pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,20 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-        <!-- CSS code from Bootply.com editor -->
-        
-        <style type="text/css">
-            
-
-        </style>
-    </head>
-    
-    <!-- HTML code from Bootply.com editor -->
-    
-    <body>
-        
-        
+  
 <div class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,117 +20,8 @@
       
     </div><!-- /.container -->
 </div><!-- /.navbar -->
-  
-<!-- HEADER 
-=================================-->
 
-<div class="jumbotron text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col col-lg-12 col-sm-12">
-          <h1>BobCat Bulletin</h1>
-          <p>Filter [announce]ments</p>
-          
-        </div>
-      </div>
-    </div> 
-</div>
-<!-- /header container-->
-
-<!-- CONTENT
-=================================-->
-<div class="container">
-    <div class="row">
-        <div class="col-md-4"><div class="well"><h2>Academics</h2>
-            <ul>
-                <li> #lecture "Heavy Bamboo: How archaic bamboo instruments became modern in Bandung, Indonesia" by Henry Spiller. Friday, May 16th, 12:15 p.m. PGill G10</li>
-            </ul>   
-        </div></div>
-        <div class="col-md-4"><div class="well"><h2>Athletics</h2>
-            <ul>
-                <li> #soccer "Seniors vs. Underclass 4th Annual 11v11 Socer Game" Thursday, May 15th, 6 p.m. on Garcelon</li>
-            <ul>    
-        </div></div>
-        <div class="col-md-4"><div class="well"><h2>Arts and Entertainment</h2>
-            <ul>
-                <li> #drawing "Life Drawing" every Wednesday, Olin 259. Call (207)786-8302, or email museum@bates.edu for more info</li>
-            <ul>
-        </div></div>
-
-    <div class="row">
-        <div class="col-md-4"><div class="well"><h2>Student Activities</h2>
-            <ul>
-                <li> #senior "Senior Week Bus Pay and Ticket Pick-Up." Friday, May 15th, 12-2:30 p.m. in Commons. Bring $10 to reserve your spot on the bus to Portland!</li>
-                <li> #signup "White Water Rafting on the Kennebec River." Saturday, May 17th, all day. $60 dollars. Come to Student Activity's Office in Chase Hall to sign up.</li>
-            <ul>
-        </div></div>
-        <div class="col-md-4"><div class="well"><h2>Administration</h2>
-            <ul>
-                <li> #sophomore "Sophomore Class Dinner." Wednesday, May 14th, 5-7:30 p.m. in Memorial Commons.</li>
-                <li> #BCDC #lecture "How Social Sciences and Humanities Must Shape the Future with Tony Salvador." Wednesday, May 14th, 7-8:30 p.m. in the Benjamin Mays Center.</li>
-                <li> #BCDC "Career Development Fellows Available to Help You." Available Daily from 1-3 p.m. in the BCDC, Monday at the OIE from 8-10 p.m., and Wednesdays at the library from 7-9 p.m.
-            <ul>
-        </div></div>
-        <div class="col-md-4"><div class="well"><h2>Clubs and Organizations</h2>
-            <ul>
-                <li> #pause "Silence-Music-Poetry-Dance-Prose." Every Wednesday, 9-9:30 p.m. in the Chapel.</li>
-                <li> #discordians "Dungeoneering 201:Vault of the Dracolich." Friday, May 16th, 3 p.m. in Commons 226.</li>
-                <li> #signup #outingclub "Spring Clambake at Popham Beach." Sunday, May 18th, 10 a.m.-4 p.m. Tickets Sold in Commons.
-            <ul>   
-        </div></div>
-    </div>
-</div>
-<hr>
-<!-- /CONTENT ============-->
-
-        
-        <script src="http://edge.quantserve.com/quant.js" async="" type="text/javascript"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<%= yield %>
 
 
-        <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-
-
-
-
-
-
-        
-        <!-- JavaScript jQuery code from Bootply.com editor  -->
-        
-        <script type="text/javascript">
-        
-        $(document).ready(function() {
-        
-            
-        
-        });
-        
-        </script>
-        
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-40413119-1', 'bootply.com');
-          ga('send', 'pageview');
-        </script>
-        <!-- Quantcast Tag -->
-        <script type="text/javascript">
-        var _qevents = _qevents || [];
-        
-        (function() {
-        var elem = document.createElement('script');
-        elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
-        elem.async = true;
-        elem.type = "text/javascript";
-        var scpt = document.getElementsByTagName('script')[0];
-        scpt.parentNode.insertBefore(elem, scpt);
-        })();
-        
-        _qevents.push({
-        qacct:"p-0cXb7ATGU9nz5"
-        });
-        </script>
-    
 </body></html>
