--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Last Updated May 14th, 2014 11:14 a.m.</a>
+      <a class="navbar-brand" href="/">Last Updated May 14th, 2014 11:14 a.m.</a>
       
     </div><!-- /.container -->
 </div><!-- /.navbar -->
